# ProgSysRes_Projet

./: .gitignore  README.md  structural_diagram.drawio.xml
Gestion_Comptes/: CMakeLists.txt  main.c  user_database_engine.c  user_database_engine.h
Partie_Centralisee/: CMakeLists.txt  main.c  server_handler.c  server_handler.h  user_database_handler.c  user_database_handler.h
Partie_Client/: CMakeLists.txt  main.c
